Right align report number cols and update invisible padding (PR #1003) (Issue #987)
* Right align report number cols and update invisible padding

* Fix snapshots

--- a/src/Hedwig/ClientApp/src/assets/styles/_general.scss
+++ b/src/Hedwig/ClientApp/src/assets/styles/_general.scss
@@ -42,8 +42,12 @@ h2 {
 	align-self: center;
 }
 
-.one-half-char-left {
-	left: -0.5ch;
+.one-half-char-right {
+	right: -0.5ch;
+}
+
+.oec-table th.text-right {
+	@include u-text('right');
 }
 
 // *** Lists ***
